# linear-algebra-101-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  vercel.json
.serena/: project.yml
scripts/: vercel-build.sh  vercel-install.sh
src/: basis.rs  composition.rs  coordinates.rs  determinant.rs  diagonal.rs  eigen.rs  elimination.rs  error.rs  independence.rs  inverse.rs  lib.rs  matrix.rs  operator.rs  predicate_set.rs  range.rs  span.rs  subspace.rs  system.rs  transformation.rs  vector.rs  wasm.rs
src/wasm/: composition.rs  coordinates.rs  determinant.rs  eigen.rs  elimination.rs  helpers.rs  inverse.rs  linearity.rs  mod.rs  multiply.rs  operator.rs  range.rs  standard_matrix.rs  subspace.rs  transform.rs
web/: .gitignore  CLAUDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts
web/src/components/: CompositionCanvas.tsx  CoordinatesCanvas.tsx  DeterminantCanvas.tsx  EigenvaluesCanvas.tsx  InverseCanvas.tsx  LinearityCanvas.tsx  MatrixGrid.tsx  NullSpaceCanvas.tsx  OperatorCanvas.tsx  Playback.tsx  RangeCanvas.tsx  RankCanvas.tsx  SamplerCanvas.tsx  SpanCanvas.tsx  TransformCanvas.tsx  ui.tsx
web/src/lib/: canvas.ts  format.ts  grid.ts  linalg.ts  query-client.ts
web/src/routes/: __root.tsx  composition.tsx  coordinates.tsx  determinant.tsx  eigenvalues.tsx  elimination.tsx  index.tsx  invertibility.tsx  linearity.tsx  multiply.tsx  nullspace.tsx  operator.tsx  range.tsx  rank.tsx  span.tsx  standard-matrix.tsx  transform.tsx
(+15 files in other folders)
